--- a/cititest.html
+++ b/cititest.html
@@ -39,6 +39,7 @@
                 margin-top: 0;
                 font-size: large;
                 padding: 1rem;
+                border-radius: 1.5px 1.5px 0 0;
             }
 
             .available {
