Hide header in narrow layout

--- a/cititest.html
+++ b/cititest.html
@@ -105,6 +105,10 @@
             }
 
             @media (max-width: 500px) {
+
+                .fronts-piece {
+                    display: none;
+                }
     
                 .station-block {
                     display: block;
@@ -357,8 +361,8 @@
 
     <body>
         <div id="container" class="settings-container">
-            <h1>CITIBike Test</h1>
-            <p>Let's get the Citibike data hooked up</p>
+            <h1 class="fronts-piece">CITIBike Test</h1>
+            <p class="fronts-piece">Let's get the Citibike data hooked up</p>
             <div id="station-info">
                 
             </div>
