--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                     </div>
                 </div>
             </div>
+            <div id="bikestatus">                
+            </div>
             <div id="forecast">
                 <h2 id="f1-title"></h2>
                 <p id="f1"></p>
