Refactor bike fetch and display code. Move bike fetch and display code over to main.js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div id="bikestatus">                
             </div>
-            <div id="forecast">
+            <div id="forecast" class="hide">
                 <h2 id="f1-title"></h2>
                 <p id="f1"></p>
 
