--- a/settings.html
+++ b/settings.html
@@ -18,10 +18,11 @@
     <body>
         <div id="container" class="settings-container">
             <h1>Settings</h1>
+
+            <h2>Weather</h2>
+            <p class="body-text">Weather data provided by <a href="https://www.weather.gov/documentation/services-web-api">The National Weather Service API</a></p>
             <p class="body-text">Click "get location" to populate longitude and latitude based on your current location (you'll have to give permission for this).</p> 
-
             <div id="errors"></div>
-
             <form>
                 <label for="lat">Latitude</label> <a class="helper-link" onclick="getLocation()">get location</a>
                 <input id="lat" type="text">
@@ -29,13 +30,33 @@
                 <input id="lon" type="text">
                 <div id="station-radio-group">
                 </div>
+            </form>
+
+            <h2>Citibike</h2>
+            <p class="body-text">Bike station status provided by <a href="https://www.citibikenyc.com/system-data">CitibikeNYC</a></p>
+
+            <div id="bike-settings">
+                <div id="twin-list-picker">
+                    <div>
+                        <select id="station-list" multiple>
+                        </select>
+                    </div>
+                    <div class="vertical-buttons">
+                        <button onclick="addStations()">&gt;</button>
+                        <button onclick="removeStations()">&lt;</button>
+                    </div>
+                    <div>
+                        <select id="selected-stations" multiple>
+       
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <form>
                 <input class="secondary" type="button" value="Cancel" onclick="window.location = 'index.html'">
                 <input class="primary" type="button" value="Save" onclick="saveLatLon()">
             </form>
 
-            <div id="settings">
-
-            </div>
             <div>
                 <h1>About</h1>
                 <p class="body-text">Hacked together with love in NYC.</p>
