Add an option to replace forecast with bike info

--- a/settings.html
+++ b/settings.html
@@ -35,6 +35,8 @@
             <h2>Citibike</h2>
             <p class="body-text">Bike station status provided by <a href="https://www.citibikenyc.com/system-data">CitibikeNYC</a></p>
 
+            <input type="checkbox" id="show-bikes" /><label for="show-bikes">Show bike status instead of forecast (why would you want to see both?)</label>
+
             <div id="bike-settings">
                 <div id="twin-list-picker">
                     <div>
