--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div id="bikestatus">                
+            <div id="bikestatus" class="hide">                
             </div>
             <div id="forecast" class="hide">
                 <h2 id="f1-title"></h2>
