--- a/testing/index.html
+++ b/testing/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>MTA Test</title>
+        <title>MTA Testing</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script type="text/javascript" src="protobuf.js"></script>
         <script type="text/javascript" src="complexes.js"></script>
         <script type="text/javascript" src="destinationComplex.js"></script>
