--- a/testing/index.html
+++ b/testing/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>MTA Testing</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script type="text/javascript" src="protobuf.js"></script>
         <script type="text/javascript" src="complexes.js"></script>
@@ -97,7 +99,7 @@
                                 html = ""
                                 arrivals.forEach(arrival => { 
                                     html += '<div class="train">'
-                                    html += `<p class="line">${arrival.line}</p>`
+                                    html += `<p class="line ${arrival.line.toLowerCase()}">${arrival.line}</p>`
                                     html += `<p class="destination">${arrival.destination}</p>`
                                     if (arrival.minutes <= 0) {
                                         html += '<p class="time arriving">ARRIVING</p>'
@@ -183,6 +185,75 @@
             .arriving {
                 color: red;
             }
+
+            /* MTA Line decoration below, this can be reused, don't throw it out */
+
+            .line {
+                width: 1.5rem;
+                height: 1.5rem;
+                line-height: 1.7rem;
+                text-align: center;
+                border-radius: 50%;
+                font-weight: bold;
+            }
+
+            .a, .c, .e {
+                background-color: #0039A6;
+                color: #ffffff;
+            }
+            
+            .b, .d, .f, .m {
+                background-color: #FF6319;
+                color: #ffffff;
+            }
+
+            .g {
+                background-color: #6CBE45;
+                color: #ffffff;
+            }
+
+            .j, .z {
+                background-color: #996633;
+                color: #ffffff;
+            }
+
+            .l {
+                background-color: #A7A9AC;
+                color: #ffffff;
+            }
+
+            .n, .q, .r, .w {
+                background-color: #FCCC0A;
+                color: black;
+            }
+
+            .s {
+                background-color: #808183;
+                color: #ffffff;
+            }
+
+            .\30 1, .\30 2, .\30 3 {
+                background-color: #EE352E;
+                color: #ffffff;
+            }
+
+            .\30 4, .\30 5, .\30 6 {
+                background-color: #00933C;
+                color: #ffffff;
+            }
+
+            .\30 7 {
+                background-color: #B933AD;
+                color: #ffffff;
+            }
+
+            .sir {
+                font-size: 0.65rem;
+                background-color: #0078C6;
+                color: #ffffff;
+            }
+
+            /* End MTA Line decoration */
 
         </style>
     </head>
