Don't display trains that are on unscheduled tracks. Fixes #38

--- a/testing/index.html
+++ b/testing/index.html
@@ -65,7 +65,7 @@
                             for (const message of feed.entity) {
                                 // Only look at tripUpdates
                                 if (message.tripUpdate) {
-                                    // Need to grab the (possible) last stop here, might use it later if it this tripUpate matches our station
+                                    // Get the last stop here, might use it later if it this tripUpate matches our station
                                     if (message.tripUpdate.stopTimeUpdate.length > 0) {
                                         lastStop = message.tripUpdate.stopTimeUpdate[message.tripUpdate.stopTimeUpdate.length - 1]
                                         lastStopId = lastStop.stopId.substr(0,lastStop.stopId.length - 1)
@@ -73,10 +73,15 @@
                                     // Loop through the stopTimeUpdates and only show those for the station we care about
                                     for (const stopUpdate of message.tripUpdate.stopTimeUpdate) {
                                         if (stopUpdate.stopId.substr(0, stopUpdate.stopId.length - 1) == STATION_ID) {
-                                            // Figure out number of minutes
-                                            arrivalTime = new Date(stopUpdate.arrival.time * 1000)
-                                            arrivalDiff = arrivalTime - Date.now()
-                                            arrivals.push({"line":message.tripUpdate.trip.routeId, "destination":getDestinationName(lastStopId), "minutes":(arrivalDiff / 60 / 1000).toFixed(0) })
+                                            // MTA says they remove trains that aren't on schedules tracks from their countdown displays, so we will too. 
+                                            // See https://github.com/jpreardon/good-morning-display/issues/38 for detail
+                                            if (stopUpdate[".nyctStopTimeUpdate"].scheduledTrack == stopUpdate[".nyctStopTimeUpdate"].actualTrack) {
+                                                // Calculate number of minutes
+                                                arrivalTime = new Date(stopUpdate.arrival.time * 1000)
+                                                arrivalDiff = arrivalTime - Date.now()
+                                                // Add to arrivals array
+                                                arrivals.push({"line":message.tripUpdate.trip.routeId, "destination":getDestinationName(lastStopId), "minutes":(arrivalDiff / 60 / 1000).toFixed(0) })
+                                            }
                                         }
                                     }
                                 }
