Turn interval timer back on.

--- a/testing/index.html
+++ b/testing/index.html
@@ -60,7 +60,7 @@
                     .then(x => {
                         updateArrivals(STATION_ID)
                         document.getElementById("stop-name").innerHTML = getStationName(STATION_ID)
-                        //window.setInterval(updateArrivals, 1000 * 30, STATION_ID)
+                        window.setInterval(updateArrivals, 1000 * 30, STATION_ID)
                     })
                     .catch(error => {
                         console.error(error)
